# my_project

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
src/forest_ml/: data.py  pipeline.py  pipeline_2.py  profiling.py  train.py  train_2.py
tests/: test_train.py
