[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["Elena Burlo <burlolena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = "~1.3.5"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
eda = "forest_ml.profiling:profile"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
