[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["Elena Burlo <burlolena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "~1.3.5"
pandas-profiling = "^3.2.0"
click = "^8.1.3"
sklearn = "^0.0"
mlflow = "^1.25.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"
mypy = "^0.950"

[tool.poetry.scripts]
eda = "forest_ml.profiling:profile"
train = "forest_ml.train:train"
train_2 = "forest_ml.train_2:train"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
